arabic home page

--- a/arability/app/assets/stylesheets/pages.css.scss
+++ b/arability/app/assets/stylesheets/pages.css.scss
@@ -21,16 +21,16 @@ img.game-preview {
 
 div.game-preview-container a {
 	text-decoration: none;
-	margin-top: 20%;
+	margin: 20%;
 	line-height: 30px;
 }
 
 div.game-preview-container div {
 	width: 50%;
-	float: left;
 }
 
 div.game-preview-container {
 	
 	margin-top: 5%;
+	text-align: center;
 }
