--- a/arability/app/views/pages/_game-intro.html.erb
+++ b/arability/app/views/pages/_game-intro.html.erb
@@ -1,9 +1,11 @@
 <div class="game-preview-container">
-	<div>
+	<div class="pull-left">
 		<img class="game-preview" src="/assets/Game_screenShot.png">
 	</div>
-	<div>
-		<h1><a>Play the Arability Game And contribute</a></h1>
-		<a href="/game" class="btn btn-info btn-large-play span4">PLAY</a>
+	<div class="pull-left">
+		<h1><a>إلعب</a></h1>
+		<h1><a>لعبت عربلتي</a></h1>
+		<h1><a>و ساهم</a></h1>
+		<a href="/game" class="btn btn-info btn-large-play span4">إلعب</a>
 	</div>
 </div>
