--- a/arability/app/views/devise/registrations/new.html.erb
+++ b/arability/app/views/devise/registrations/new.html.erb
@@ -5,12 +5,12 @@
 <% end %>
 <div class="container well">
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-
-  <% if resource.errors.any? %>
-    <div class="alert"><%= devise_error_messages! %></div>
-  <% end %>
+    <% if resource.errors.any? %>
+        <div class="alert"><%= devise_error_messages! %></div>
+    <% end %>
 
     <div class="container">
+
         <div><%= f.label t(:email), :class => "control-label" %>
         <%= f.email_field :email, :style => "margin-left: 10px;" %></div></br>
 
@@ -53,8 +53,7 @@
         <div><%= f.label t(:education_level), :class => "control-label" %>
         <% if I18n.locale == :ar %>
             <%= f.select(:education_level, options_for_select(['',['مدرسة','School'],['جامعة','University'],
-
-            ['خريج','graduate']]), {}, { :style => "margin-left: 10px;" }) %></br></div>
+            ['خريج','Graduate']]), {}, { :style => "margin-left: 10px;" }) %></br></div>
         <% else %>
             <%= f.select(:education_level, options_for_select(['','School','University','Graduate']), {}, { :style => "margin-left: 10px;" }) %></br></div>
         <% end %>
@@ -69,4 +68,6 @@
     </div>
         
 
-</div>
+    </div>
+
+    <% end %>
