[FIX MERGE CONFLICT] fix add prize validation and form and delete old files resulted from a conflict

--- a/arability/app/views/admin/_admin-add-prize.html.erb
+++ b/arability/app/views/admin/_admin-add-prize.html.erb
@@ -39,7 +39,7 @@
 				<% end %>
 			</div>
 		</div>
-		<div class="control-group<%= flash[:error] && flash[:errortype] == 'addprize' && flash[:error][:image]? ' error' : ''%>">
+		<div class="control-group<%= flash[:error] && flash[:errortype] == 'addprize' && (flash[:error][:image] || flash[:error][:image_content_type] || flash[:error][:image_file_size])? ' error' : ''%>">
 			<label class="control-label">الصورة</label>
 			<div class="controls">
 				<div class="uploader-controls">
@@ -57,6 +57,11 @@
 				<br>
 				<% if flash[:error] && flash[:errortype] == 'addprize' && flash[:error][:image] %>
 					<% flash[:error][:image].each do |er| %>
+						<span class="help-block"><%= er %></span>
+					<% end %>
+				<% end %>
+				<% if flash[:error] && flash[:errortype] == 'addprize' && flash[:error][:image_file_size] %>
+					<% flash[:error][:image_file_size].each do |er| %>
 						<span class="help-block"><%= er %></span>
 					<% end %>
 				<% end %>
