[#181][WIP] checked code convetions

--- a/arability/app/views/devise/registrations/edit.html.erb
+++ b/arability/app/views/devise/registrations/edit.html.erb
@@ -155,7 +155,7 @@
         <br><br><br><br><br><br><br>
         <% end %>
         <div class="Twitter" style="width: 344px;margin-right: auto;margin-left: auto;">
-          <% if Authentication.exists?(:gamer_id => current_gamer.id, :provider => "twitter") %>
+          <% if Authentication.exists?(gamer_id: current_gamer.id, provider: "twitter") %>
           <% if I18n.locale==:en %>
           <h5><img alt="Twitter" class="border-none" src="/assets/twitter.png" width="100" />
             already connected to Twitter!</h5>
