--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -39,5 +39,14 @@
 </div>
 
 <%= render 'shared/navbardropdownjs' %>
+<!-- YAMLI CODE START -->
+<script type="text/javascript" src="http://api.yamli.com/js/yamli_api.js"></script>
+<script type="text/javascript">
+  if (typeof(Yamli) == "object" && Yamli.init( { uiLanguage: "en" , startMode: "onOrUserDefault" } ))
+  {
+    Yamli.yamlify( "suggest_synonym_textbox", { settingsPlacement: "inside" } );
+  }
+</script>
+<!-- YAMLI CODE END -->
 </body>
 </html>
