--- a/arability/app/assets/stylesheets/application.css.scss
+++ b/arability/app/assets/stylesheets/application.css.scss
@@ -10,8 +10,8 @@
  *
  *= require_self
  */
-body { 
-  padding-top: 41px; 
+body {
+  padding-top: 41px;
   padding-bottom: 40px;
   background-color: #f5f5f5;
 }
@@ -21,6 +21,11 @@ body {
 
 .req{
     color: red;
+}
+
+div.field_with_errors {
+  @extend .control-group.error;
+  display: inline;
 }
 
 label.radio {
