[Issue #364][WIP] updated search fields with autocomplete support

--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -5,7 +5,8 @@
 			<%= content_tag(:div, :class => 'input-append') do %>
 				<% text_field_tag(:search, @search_keyword,
 													:placeholder => t(:search_here),
-													:class => 'search-query') + %>
+													:class => 'search-query autocomplete',
+													autocomplete: "off") + %>
 				<% button_tag(:type => "submit",:class => 'btn') do %>
 					<% content_tag(:i, nil,:class => "icon-search") %>
 				<% end %>
@@ -219,3 +220,15 @@
 			</span>
 	</div>
 <% end %>
+
+<script type="text/javascript">
+	$('.autocomplete').typeahead({
+		source: fetch_keywords,
+		items: 4
+	});
+	function fetch_keywords(keyword, callback){
+		$.post('<%= autocomplete_path %>', { search: keyword }, function(data, _, _){
+			callback(data);
+		})
+	}
+</script>
