--- a/arability/app/views/search/search_keywords.html.erb
+++ b/arability/app/views/search/search_keywords.html.erb
@@ -1,11 +1,12 @@
 <div class="row">
 	<div class="span12">
-		<%= form_tag(search_keywords_path, :method => "post", :class => "form-search") do %>
+		<%= form_tag(search_path, :method => "post", :class => "form-search") do %>
 	  	<%= content_tag(:div, :class => "input-append") do %>
 	  		<% text_field_tag(:search, @search_keyword,
-	  											:placeholder => t(:search_here),
-	  											:class => "search-query") + %>
-				<% button_tag(:type => "submit",:class => "btn", :id => "search_button") do %>
+	  											placeholder: t(:search_here),
+	  											:class => "search-query autocomplete",
+	  											autocomplete: "off") + %>
+				<% button_tag(type: "submit", :class => "btn", id: "search_button") do %>
 					<% content_tag(:i, nil,:class => "icon-search") %>
 				<% end %>
 			<% end %>
@@ -16,7 +17,7 @@
 		<% if @similar_keywords.blank? && !@search_keyword.blank? %>
 			<div class="well well-small">
 				<span>
-					<%= form_tag(keywords_create_path, :method => "post", :class => "form-search", :style => "margin-bottom:0px;") do %>
+					<%= form_tag(keywords_create_path, method: "post", :class => "form-search", style: "margin-bottom:0px;") do %>
 					<%= content_tag(:span, t(:keyword_not_found)) %>
 						<input name="keyword[name]" value="<%= @search_keyword %>" type="hidden">
 						<input name="redirect" value="<%= search_keywords_path %>" type="hidden">
@@ -26,12 +27,24 @@
 			</div>
 		<% else %>
 			<% @similar_keywords.each do |c| %>
-				<div class="accordion-group" style="padding:10px;">
+<!-- 				<div class="accordion-group" style="padding:10px;">
 					<div class="accordion-heading">
-						<%= link_to c.name, search_path(:search => c.name, :project_id => @project_id), :method => :post %>
+						<%= link_to c.name, search_path(search: c.name, project_id: @project_id), method: :post %>
 					</div>
-				</div>
+				</div> -->
 			<% end %>
 		<% end %>
 	</div>
 </div>
+
+<script type="text/javascript">
+	$('.autocomplete').typeahead({
+		source: fetch_keywords,
+		items: 4
+	});
+	function fetch_keywords(keyword, callback){
+		$.post('<%= autocomplete_path %>', { search: keyword }, function(data, _, _){
+			callback(data);
+		})
+	}
+</script>
