[issue #353] [WIP] makes the keyword clickable to redirect to the keyword page

--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -74,7 +74,8 @@
           <% while count<@words.count %>
             <tr>
               <td style="text-align:center">
-                <%= @words[count].name %>
+                <% keyword = @words[count].name%>
+                <%= link_to @words[count].name , search_path(search: keyword) %>
               </td>
               <td style="text-align:center">
                 <%= @synonyms[count].name %>
