--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -52,7 +52,14 @@
   <% else %>
     <a class="btn pull-right" href="/developers/projects/<%= project1.id %>/edit"><i class="icon-edit"></i><%= t(:projects_index_edit)%></a>
   <% end %>
+  
+  <% if I18n.locale == :ar %>
+    <a class="btn pull-left" href="/developers/developer/<%= project1.id %>/destroy"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
+  <% else %>
+    <a class="btn pull-right" href="/developers/developer/<%= project1.id %>/destroy"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
+  <% end %>
   <br />
+
             </div>
           </td>
           <td style="width:40px;"></td>
@@ -88,6 +95,12 @@
     <a class="btn pull-left" href="/developers/projects/<%= project2.id %>/edit"><i class="icon-edit"></i><%= t(:projects_index_edit)%></a>
   <% else %>
     <a class="btn pull-right" href="/developers/projects/<%= project2.id %>/edit"><i class="icon-edit"></i><%= t(:projects_index_edit)%></a>
+  <% end %>
+
+  <% if I18n.locale == :ar %>
+    <a class="btn pull-left" href="/developers/developer/<%= project1.id %>/destroy"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
+  <% else %>
+    <a class="btn pull-right" href="/developers/developer/<%= project1.id %>/destroy"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
   <% end %>
   <br />
                 </div>
@@ -144,6 +157,11 @@
   <% else %>
     <a class="btn pull-right" href="/developers/projects/<%= project1.id %>/edit"><i class="icon-edit"></i><%= t(:projects_index_edit)%></a>
   <% end %>
+  <% if I18n.locale == :ar %>
+    <a class="btn pull-left" href="/developers/developer/<%= project1.id %>/destroy"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
+  <% else %>
+    <a class="btn pull-right" href="/developers/developer/<%= project1.id %>/destroy"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
+  <% end %>
   <br />
 </div>
     </td>
@@ -180,6 +198,12 @@
     <a class="btn pull-left" href="/developers/projects/<%= project2.id %>/edit"><i class="icon-edit"></i><%= t(:projects_index_edit)%></a>
   <% else %>
     <a class="btn pull-right" href="/developers/projects/<%= project2.id %>/edit"><i class="icon-edit"></i><%= t(:projects_index_edit)%></a>
+  <% end %>
+
+  <% if I18n.locale == :ar %>
+    <a class="btn pull-left" href="/developers/developer/<%= project1.id %>/destroy"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
+  <% else %>
+    <a class="btn pull-right" href="/developers/developer/<%= project1.id %>/destroy"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
   <% end %>
   <br />
 </div>
