--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= stylesheet_link_tag "games", :media => "all" %>
   <%= stylesheet_link_tag "pages", :media => "all" %>
+  <%= stylesheet_link_tag "bootstrap-tagmanager" %>
   <%= javascript_include_tag "application" %>
   <%= javascript_include_tag "pages" %>
   <% if I18n.locale == :ar %>
@@ -18,6 +19,7 @@
   <% end %>
   <%= stylesheet_link_tag "bootstrap-fileupload.min", :media => "all"%>
   <%= javascript_include_tag "bootstrap-fileupload.min" %>
+  <%= javascript_include_tag "bootstrap-tagmanager" %>
   <%= yield(:head) %>
   <%= csrf_meta_tags %>
 </head>
