--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -27,9 +27,17 @@
                 <%= f.text_field :email, :style => "margin-bottom: 15px;", :placeholder => t(:email), :size => "30" %>
                 <%= f.password_field :password, :style => "margin-bottom: 15px;", :placeholder => t(:password), :size => "30" %>
                 <%= f.submit t(:sign_in), :style => "clear: left; width: 100%; height: 32px; font-size: 13px;", :class => "btn btn-primary" %>
-                  <%= button_to t(:log_in_google), gamer_omniauth_authorize_path(:google_oauth2), :style => "clear: left; width: 100%; height: 32px; font-size: 13px", :class => "btn btn-success" %>
-             <!--    <%= link_to "Sign In with Google", :style => "clear: left; width: 88%; height: 30px; font-size: 13px", :class => "btn btn-success" %> -->
+                <div style="padding-top:5px; text-align:center; font-style:italic;">
+                  <span>OR</span>
+                </div>
+                  <div style="padding:5px; text-align:center;">
+                  <span>Sign in with an existing account</span>
+                </div>
+                <div class="providers">
+                  <a href="/auth/facebook"><img src="assets/facebook_logo.png" width="60px"></a>
+                </div>
               <% end %>
+
             </div>
           </li>
       <% else %>
