[Issue #92] Added autocomplete with tag functionality in arabic and english

--- a/arability/app/views/search/search_keywords.html.erb
+++ b/arability/app/views/search/search_keywords.html.erb
@@ -1,6 +1,3 @@
-<% content_for :head do %>
-  <%= javascript_include_tag "categories" %>
-<% end %>
 <div class="row">
 	<div class="span12">
 		<%= form_tag(search_keywords_path, :method => "post", :class => "form-search") do %>
@@ -12,7 +9,7 @@
 					<% content_tag(:i, nil,:class => "icon-search") %>
 				<% end %>
 			<% end %>
-      <input name="categories" type="text" class="categories-autocomplete" autocomplete="off" placeholder="<%= t :enter_categories %>" value="<%= @categories %>"/>
+      <input name="categories" type="text" id="categories" class="categories-autocomplete" autocomplete="off" placeholder="<%= t :enter_categories %>" value="<%= @categories %>"/>
 
       <input name="project_id" type="hidden" value="<%= @project_id %>"/>
 		<% end %>
@@ -39,3 +36,4 @@
 		<% end %>
 	</div>
 </div>
+<%= render 'categories-autocomplete' %>
