[Issue #92] Fixed the name of the inputs to avoid changing controllers

--- a/arability/app/views/search/_categories-autocomplete.html.erb
+++ b/arability/app/views/search/_categories-autocomplete.html.erb
@@ -4,6 +4,7 @@
   $(function() {
   $(".categories-autocomplete").tagsManager({
     delimeters: [44, 188, 13],
+    hiddenTagListName: "categories",
     typeahead: true,
     typeaheadAjaxSource: null,
     typeaheadSource: null,
