--- a/arability/app/views/search/search_keywords.html.erb
+++ b/arability/app/views/search/search_keywords.html.erb
@@ -9,7 +9,7 @@
 					<% content_tag(:i, nil,:class => "icon-search") %>
 				<% end %>
 			<% end %>
-      <input name="categories" type="text" id="categories" class="categories-autocomplete" autocomplete="off" placeholder="<%= t :enter_categories %>" value="<%= @categories %>"/>
+      <input name="categories_input" type="text" id="categories" class="categories-autocomplete" autocomplete="off" placeholder="<%= t :enter_categories %>" value="<%= @categories %>"/>
 
       <input name="project_id" type="hidden" value="<%= @project_id %>"/>
 		<% end %>
