--- a/arability/app/views/devise/registrations/edit.html.erb
+++ b/arability/app/views/devise/registrations/edit.html.erb
@@ -9,6 +9,7 @@
   <ul class="nav nav-tabs">
     <li class="active"><a href="#tab1" data-toggle="tab"><%= t(:my_info)%></a></li>
     <li><a href="#tab2" data-toggle="tab"><%= t(:social_media)%></a></li>
+    <li><a href="#tab3" data-toggle="tab"><%= t(:choose_sub)%></a></li>
   </ul>
   <div class="tab-content" style="width:1200px;">
     <div class="tab-pane active" id="tab1">
@@ -180,6 +181,67 @@
           <% end %>
         </div>
       </div>
+    </div>
+    <div class="tab-pane" id="tab3">
+      <%
+      developer = Developer.find_by_gamer_id(current_gamer.id) 
+      %>
+      <%= form_for(:my_subscription, :url => my_subscriptions_pick_path ) do %>
+<div style = "width:1000px; margin: 0 auto;">
+<table>
+    <tr>
+<% SubscriptionModel.all.each do |sm| %>
+  <%if(developer.my_subscription)
+    selected_sub_id = developer.my_subscription.subscription_model_id
+  else
+    selected_sub_id = 1
+  end%>
+  
+      <td width="300px">
+  <div class="well" style="margin-left: 30px; box-shadow: 0 4px 2px #ccc;">
+  <p><%= radio_button_tag(:my_subscription, sm.id, sm.id == selected_sub_id) %> <%= sm.name %><br />
+    <% if I18n.locale==:en %>
+    <h5>The limit for the word search is:</h5>
+    <% else I18n.locale==:ar %>
+    <h5> الحد الاقصى للبحث عن الكلمات:</h5>
+    <% end %>
+    <%=sm.limit_search%><br />
+    <% if I18n.locale==:en %>
+    <h5>The limit for the word follow is:</h5>
+    <% else I18n.locale==:ar %>
+    <h5>الحد الاقصى لمتابعة الكلمات:</h5>
+    <% end %>
+    <%=sm.limit_follow%><br/>
+    <% if I18n.locale==:en %>
+    <h5>The limit for the word add is:</h5>
+    <% else I18n.locale==:ar %>
+    <h5>الحد الاقصى لاضافة الكلمات:</h5>
+    <% end %>
+    <%=sm.limit%><br />
+    <% if I18n.locale==:en %>
+    <h5>The limit for the projects:</h5>
+    <% else I18n.locale==:ar %>
+    <h5>الحد الاقصى لاضافة المشارىع:</h5>
+    <% end %>
+    <%=sm.limit_project%>
+  </p>
+    </div>
+            </td>
+        
+<% end %>
+<tr>
+    </table>
+
+<center>
+<% if I18n.locale==:en %>
+<%= submit_tag "Select Subscription", :class => "btn btn-success btn-large", :style => "margin-top: 20px;   " %>
+<% else I18n.locale==:ar %>
+<%= submit_tag "إختر",:class => "btn btn-success btn-large", :style => "margin-top: 20px;   "%>
+</div>
+</div>
+</center>
+<% end %>
+<% end %>
     </div>
   </div>
 </div>
