--- a/arability/app/views/search/search_keywords.html.erb
+++ b/arability/app/views/search/search_keywords.html.erb
@@ -30,13 +30,5 @@
 </div>
 
 <script type="text/javascript">
-	$(".autocomplete").typeahead({
-		source: fetch_keywords,
-		items: 4
-	});
-	function fetch_keywords(keyword, callback){
-		$.post("<%= autocomplete_path %>", { search: keyword }, function(data, _, _){
-			callback(data);
-		})
-	}
+	<%= render "autocomplete-script.js" %>
 </script>
