--- a/arability/app/views/projects/_form.html.erb
+++ b/arability/app/views/projects/_form.html.erb
@@ -14,14 +14,14 @@
     <div class="control-group">
         <%= f.label t(:name), :class => "control-label" %>
         <div class="controls">
-          <%= f.text_field :name, :placeholder => t(:name) %>
+          <%= f.text_field :name, :placeholder => t(:name), :id => "project_name"%>
           <span class="req">* </span>
         </div>
     </div>
     <div class="control-group">
       <%= f.label t(:categories), :class => "control-label" %>
       <div class="controls">
-        <%= text_field_tag("project[categories]", @categories, :placeholder => t(:enter_as_csv)) %>
+        <%= text_field_tag("project[categories]", @categories, :placeholder => t(:enter_as_csv), :id => "project_name") %>
         <span class="req">* </span>
     </div>
   </div>
@@ -30,11 +30,11 @@
       <span class="help-block"><%= t(:formality) %></span>
       </label>
       <div class="controls">
-          <label class="radio">
+          <label class="radio" id="project_name">
             <%= f.radio_button :formal, true %>
             <%= t(:formal) %>
           </label>
-          <label class="radio">
+          <label class="radio" id="project_name">
             <%= f.radio_button :formal, false %>
             <%= t(:slang) %>
           </label>
@@ -45,15 +45,15 @@
       <span class="help-block"><%= t(:age) %></span>
       </label>
       <div class="controls d5pxup">
-          <%= f.text_field :minAge, :class => "input-small", :placeholder =>  t(:from) %>
-          <%= f.text_field :maxAge, :class => "input-small", :placeholder =>  t(:to) %>
+          <%= f.text_field :minAge, :class => "input-small", :placeholder =>  t(:from), :id => "project_name"%>
+          <%= f.text_field :maxAge, :class => "input-small", :placeholder =>  t(:to), :id => "project_name" %>
           <span class="req">* </span>
       </div>
   </div>
   <div class="control-group">
       <%= f.label t(:desc), :class => "control-label" %>
       <div class="controls">
-          <%= f.text_area :description, :size => "6x5" %>
+          <%= f.text_area :description, :id => "desc" %>
       </div>
   </div>
   <div class="control-group">
