[Issue #205][WIP] Resized form views

--- a/arability/app/views/projects/_form.html.erb
+++ b/arability/app/views/projects/_form.html.erb
@@ -27,7 +27,7 @@
   </div>
   <div class="control-group">
       <label class="control-label">
-      <span class="help-block"><%= t(:formality) %></span>
+      <span class="help-block" id="project_name"><%= t(:formality) %></span>
       </label>
       <div class="controls">
           <label class="radio" id="project_name">
