--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -11,46 +11,46 @@
 				<% end %>
 			<% end %>
 
-			<!-- MOSTAFA's AREA! -->
 			<script type="text/javascript">
-				function on(button){
+				function onhovering(button){
 					$button = $(button);
     			if ($button.hasClass('btn-info')) {
-						$('.btnfollow').removeClass("btn-info");
-						$('.btnfollow').addClass("btn-danger");
-						$('.btnfollow').html("<%= t(:unfollow) %>");
+						$(".btnfollow").removeClass("btn-info");
+						$(".btnfollow").addClass("btn-danger");
+						$(".btnfollow").html("<%= t(:unfollow) %>");
 					}
 				}
-				function off(button){
+				function offhovering(button){
 					$button = $(button);
 					if ($button.hasClass('btn-danger')) {
-						$('.btnfollow').removeClass("btn-danger");
-						$('.btnfollow').addClass("btn-info");
-						$('.btnfollow').html("<%= t(:following) %>");
+						$(".btnfollow").removeClass("btn-danger");
+						$(".btnfollow").addClass("btn-info");
+						$(".btnfollow").html("<%= t(:following) %>");
 					}
 				}
 				function clickfollow(button){
 					$button = $(button);
 					if ($button.hasClass('btn-default')) {
 						$.get("<%= follow_word_path @search_keyword_model.id %>");
-						$('.btnfollow').removeClass("btn-default");
-						$('.btnfollow').addClass("btn-info");
-						$('.btnfollow').html("<%= t(:following) %>");
+						$(".btnfollow").removeClass("btn-default");
+						$(".btnfollow").addClass("btn-info");
+						$(".btnfollow").html("<%= t(:following) %>");
 					}else {
 						$.get("<%= unfollow_word_path @search_keyword_model.id %>");
-						$('.btnfollow').removeClass("btn-info");
-						$('.btnfollow').removeClass("btn-danger");
-						$('.btnfollow').addClass("btn-default");
-						$('.btnfollow').html("<%= t(:follow) %>");
-					}
+						$(".btnfollow").removeClass("btn-info");
+						$(".btnfollow").removeClass("btn-danger");
+						$(".btnfollow").addClass("btn-default");
+						$(".btnfollow").html("<%= t(:follow) %>");
+					}	
 				}
 
 			</script>
+
 			<% if I18n.locale==:en %>
 				<% if !is_following(@search_keyword_model.id) %>
-					<span class="pull-right"><a href="#" class="btn btnfollow btn-default" onmouseover="on(this);" onmouseout="off(this);" onclick="clickfollow(this);" style="width: 60px"><%= t(:follow) %></a></span>
+					<span class="pull-right"><a href="#" class="btn btnfollow btn-default" onmouseover="onhovering(this);" onmouseout="offhovering(this);" onclick="clickfollow(this);" style="width: 60px"><%= t(:follow) %></a></span>
 				<% else %>
-					<span class="pull-right"><a href="#" class="btn btnfollow btn-info" onmouseover="on(this);" onmouseout="off(this);" onclick="clickfollow(this);" style="width: 60px" ><%= t(:following) %></a></span>
+					<span class="pull-right"><a href="#" class="btn btnfollow btn-info" onmouseover="onhovering(this);" onmouseout="offhovering(this);" onclick="clickfollow(this);" style="width: 60px" ><%= t(:following) %></a></span>
 				<% end %>
 			<% else %>
 				<% if !is_following(@search_keyword_model.id) %>
@@ -59,8 +59,6 @@
 					<span class="pull-left"><a href="#" class="btn btnfollow btn-info" onmouseover="on(this);" onmouseout="off(this);" onclick="clickfollow(this);" style="width: 60px" ><%= t(:following) %></a></span>
 				<% end %>
 			<% end %>
-			<!-- MOSTAFA's AREA! END!!!-->
-
 
 			<div class="row" style="padding:10px;">
 				<div class="span12">
@@ -264,5 +262,3 @@
 		</div>
 	<% end %>
 <% end %>
-
-
